2011-10-05  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/common/board-common.c (__early_init): Set MSP register
	in case of DFU.

2011-10-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/chconf.h (THREAD_CONTEXT_SWITCH_HOOK): New.

	* src/Makefile.in: Follow the change of ChibiOS 2.3.3 (new
	directory structure of platforms/STM32F1xx).

	* src/main.c (vcom_configuration_descriptor_data, usb_event):
	Follow the change of ChibiOS 2.3.3 (USB_CDC_*).
	(vcom_string3): Version 0.01.

	* src/configure (MEMORY_SIZE): New.

	* src/neug.ld.in (@MEMORY_SIZE@): New (for HD device like STBEE).
	(.stacks): New in newer ChibiOS (>= 2.3.3).

	* src/random.c (adccb_err): New.
	(adcgrpcfg): Add adccb_err.

	* chibios: Updated to trunk of 2.3.3.

2011-09-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (adcgrpcfg): Fix configuration value (had old
	values by old example).

2011-09-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c 	(ROTATE): Remove.
	(SHIFT_RIGHT): New.
	(ep_add): Use SHIFT_RIGHT.

2011-09-21  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (ep_output): Bug fix for second argument of
	fnv32_hash, and change the way to place values into the buffer.
	(ep_add): Feedback byte always shift 1-bit, entropy_bit sometimes.

2011-09-20  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STBEE/mcuconf.h, boards/STBEE/board.h: New.
	* boards/STBEE/board.c: New.
	* boards/common/board-common.c (pal_default_config): Add case for
	STM32F10X_HD.
	* src/configure: Support STBEE.

	* src/random.c (PROBABILITY_50_BY_TICK): New.
	(ep_add): Use ROTATE for final feedback only.
	(fnv32_hash): New.
	(ep_output): Rename (was: ep_value).  Use fnv32_hash.

2011-08-29  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (ep_add): New argument another_random_bit.
	(crc32_top_bit, crc32_add_bit): Delete.
	(tmt_init): New.
	(rng_gen): Call ep_add with SysTick->VAL shake.
	Don't shake PRNG by interrupt timing.
	(neug_prng_reseed): New.

	* src/main.c (main): Call neug_prng_reseed after new connection.
