@@ -1,3 +1,8 @@
+2011-10-06  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/random.c (neug_flush): New.
+	(neug_prng_reseed): Call neug_flush.
+
 2011-10-05  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* boards/common/board-common.c (__early_init): Set MSP register
